[metadata]
name = yt_astro_analysis
version = 1.1.0.dev2
description = yt astrophysical analysis modules extension
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Natural Language :: English
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
keywords = astronomy astrophysics visualization amr adaptivemeshrefinement
author = The yt project
author_email = yt-dev@python.org
url = https://github.com/yt-project/yt_astro_analysis
project_urls =
    Homepage=https://yt-project.org/
    Documentation=https://yt-astro-analysis.readthedocs.io/
    Source=https://github.com/yt-project/yt_astro_analysis/
    Tracker=https://github.com/yt-project/yt_astro_analysis/issues
license = BSD 3-Clause

[options]
include_package_data = True
install_requires =
    h5py
    more_itertools
    numpy
    sympy
    unyt
    yt>=4.0.1
zip_safe = False
python_requires = >=3.6

[nosetests]
detailed-errors = 1
exclude = answer_testing
with-xunit = 1

[flake8]
exclude = doc,*/api.py,*/__init__.py,*/__config__.py
max-line-length = 999
ignore = E111,E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E201,E202,E211,E221,E222,E227,E228,E241,E301,E203,E225,E226,E231,E251,E261,E262,E265,E266,E302,E303,E305,E306,E402,E502,E701,E703,E731,W291,W292,W293,W391,W503,W504,W605
