[metadata]
name = yt_astro_analysis
version = 1.1.2
description = yt astrophysical analysis modules extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yt-project/yt_astro_analysis
author = The yt project
author_email = yt-dev@python.org
license = BSD 3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
keywords = astronomy astrophysics visualization amr adaptivemeshrefinement
project_urls =
    Homepage=https://yt-project.org/
    Documentation=https://yt-astro-analysis.readthedocs.io/
    Source=https://github.com/yt-project/yt_astro_analysis/
    Tracker=https://github.com/yt-project/yt_astro_analysis/issues

[options]
install_requires =
    h5py>=3.1.0
    more-itertools>=8.4
    yt>=4.0.1
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    astropy
    codecov
    flake8
    girder-client
    gitpython
    nose
    nose-timer
    pytest
    scipy
    sphinx
    sphinx-bootstrap-theme
    twine
    wheel

[nosetests]
detailed-errors = 1
exclude = answer_testing
with-xunit = 1

[flake8]
exclude = */__init__.py, */api.py
ignore =
    E203,
    E266,
    E302,
    E501,
    E741,
    W503,
enable-extensions = G  # flake8-logging-format (extension is disabled by default)
